docs/store/ingress-store.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-front-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: store.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-front
            port:
              number: 8080
